# fixtures/openapi.json
@@ -598,6 +598,40 @@
       },
       "Occupancy": {
         "properties": {
+          "opening_status": {
+            "type": "string",
+            "enum": [
+              "open",
+              "closed",
+              "unknown"
+            ],
+            "title": "Opening Status",
+            "default": "unknown"
+          },
+          "opens_at": {
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "date-time"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Opens At"
+          },
+          "closes_at": {
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "date-time"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Closes At"
+          },
           "facility_id": {
             "$ref": "#/components/schemas/FacilityId"
           },
